# helm-audio

./: .gitignore  .prettierignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  README.md  eslint.config.js  package.json  tsconfig.base.json  tsconfig.json
.claude/commands/: commit.md
.github/workflows/: ci.yml
docs/: architecture.md  design.md
docs/ideas/: digitone-inspiration.md  dx7-plaits-reference.md  elektron-sequencer.md  fasttracker2.md  fm-synthesis.md  ft2-clone.md  furnace.md  impulse-tracker.md  keybindings.md  m8.md  protracker.md  pt2-clone.md  schismtracker.md  tracker-history.md
docs/plans/: effects.md  fm-4op-voice.md  params.md  protocol.md  voice.md
docs/plans/.wip/: hardware.md  issues.md  pattern-bank.md  tracker-animations.md  tracker-inspiration.md  tracker-view.md  tracker-views.md
src/: binary_reader.h  effect.h  effect_bus.h  modulation.cpp  modulation.h  param.h  protocol_decoder.cpp  protocol_decoder.h  sequencer.cpp  sequencer.h  synth.cpp  synth.h  voice.cpp  voice.h  voice_bridge.cpp  worklet_bridge.cpp
src/fm4/: modulation.cpp  modulation.h  param.h  voice.cpp  voice.h  voice_decoder.cpp  voice_decoder.h
tests/: render_wav.cpp  test_effects.cpp  test_modulation.cpp  test_protocol_decoder.cpp  test_sequencer.cpp  test_synth.cpp  test_voice.cpp  test_voice4op.cpp
